--- a/template-master-utf8.tex
+++ b/template-master-utf8.tex
@@ -6,7 +6,7 @@
 %% template.tex v0.1, 2011/03/21
 
 
-\documentclass[xetex,adobefonts]{XDBAthesis}
+\documentclass[xetex,adobefonts,master]{XDBAthesis}
 % 选项说明：
 % dvipdfm  使用 dvipdfm(x) 生成最终的 PDF 文档 (缺省设置）
 % dvips    使用 dvips 生成最终的 PS 文档
@@ -24,17 +24,24 @@
 
 \begin{document}
 %%----------------- 封面部分 ----------------- %%
-    \class{7-0711}
     \schoolnumber{07071050}
     \title{复杂网络的数学模型研究与应用}{}   %%题目超过14个字把剩下的放到第二个空
-    \college{理学院}
+    \entitle{Research and Application of}{ Mathematic Model of Complex Network}   %%题目超过14个字把剩下的放到第二个空
     \major{数学与应用数学}
     \author{薛继龙}
     \advisor{齐小刚}
+    \date{二〇一二年一月}
+    \majorclass{理科}
+
+    \identifier{007}
+    \classnumber{1-1(分类号)}
+    \classification{公开}
     \maketitle
 
 %%----------------- 前言部分 ----------------- %%
     \frontmatter
+    \pagestyle{empty}
+    \include{chapter-utf8/state}
     \include{chapter-utf8/abstract}
     \tableofcontents
 
