--- a/template.tex
+++ b/template.tex
@@ -6,46 +6,50 @@
 %% template.tex v0.1, 2011/03/21
 
 
-\documentclass[pdftex]{XDBAthesis}
-% Ñ¡ÏîËµÃ÷£º
-% dvipdfm  Ê¹ÓÃ dvipdfm(x) Éú³É×îÖÕµÄ PDF ÎÄµµ (È±Ê¡ÉèÖÃ£©
-% dvips    Ê¹ÓÃ dvips Éú³É×îÖÕµÄ PS ÎÄµµ
-% pdftex   Ê¹ÓÃ pdfLaTeX Éú³É×îÖÕµÄ PDF ÎÄµµ
+\documentclass[xetex,adobefonts]{XDBAthesis}
+% é€‰é¡¹è¯´æ˜ï¼š
+% dvipdfm  ä½¿ç”¨ dvipdfm(x) ç”Ÿæˆæœ€ç»ˆçš„ PDF æ–‡æ¡£ (ç¼ºçœè®¾ç½®ï¼‰
+% dvips    ä½¿ç”¨ dvips ç”Ÿæˆæœ€ç»ˆçš„ PS æ–‡æ¡£
+% pdftex   ä½¿ç”¨ pdfLaTeX ç”Ÿæˆæœ€ç»ˆçš„ PDF æ–‡æ¡£
+% xetex    ä½¿ç”¨ XeLaTeX ç”Ÿæˆ PD Fæ–‡æ¡£
+% adobefonts ä½¿ç”¨ Adobe ä¸­æ–‡å­—ä½“
+% winfonts ä½¿ç”¨ Windows ä¸­æ–‡å­—ä½“
+% master   ç”¨äºç”Ÿæˆç¡•å£«å­¦ä½è®ºæ–‡
 
-% Í¼ĞÎÎÄ¼şµÄËÑË÷Â·¾¶
-\graphicspath{{chapter/}{figures/}}
+% å›¾å½¢æ–‡ä»¶çš„æœç´¢è·¯å¾„
+\graphicspath{{chapter-utf8/}{figures/}}
 
 \begin{document}
-%%----------------- ·âÃæ²¿·Ö ----------------- %%
+%%----------------- å°é¢éƒ¨åˆ† ----------------- %%
     \class{7-0711}
     \schoolnumber{07071050}
-    \title{¸´ÔÓÍøÂçµÄÊıÑ§Ä£ĞÍÑĞ¾¿ÓëÓ¦ÓÃ}{}   %%ÌâÄ¿³¬¹ı14¸ö×Ö°ÑÊ£ÏÂµÄ·Åµ½µÚ¶ş¸ö¿Õ
-    \college{ÀíÑ§Ôº}
-    \major{ÊıÑ§ÓëÓ¦ÓÃÊıÑ§}
-    \author{Ñ¦¼ÌÁú}
-    \advisor{ÆëĞ¡¸Õ}
+    \title{å¤æ‚ç½‘ç»œçš„æ•°å­¦æ¨¡å‹ç ”ç©¶ä¸åº”ç”¨}{}   %%é¢˜ç›®è¶…è¿‡14ä¸ªå­—æŠŠå‰©ä¸‹çš„æ”¾åˆ°ç¬¬äºŒä¸ªç©º
+    \college{ç†å­¦é™¢}
+    \major{æ•°å­¦ä¸åº”ç”¨æ•°å­¦}
+    \author{è–›ç»§é¾™}
+    \advisor{é½å°åˆš}
     \maketitle
 
-%%----------------- Ç°ÑÔ²¿·Ö ----------------- %%
+%%----------------- å‰è¨€éƒ¨åˆ† ----------------- %%
     \frontmatter
-    \include{chapter/abstract}
+    \include{chapter-utf8/abstract}
     \tableofcontents
 
-%%----------------- ÕıÎÄ²¿·Ö ----------------- %%
+%%----------------- æ­£æ–‡éƒ¨åˆ† ----------------- %%
     \mainmatter
     \pagestyle{content}
-    \include{chapter/chap-intro}
-    \include{chapter/chap-math}
-    \include{chapter/chap-tabfig}
-    \include{chapter/chap-faq}
+    \include{chapter-utf8/chap-intro}
+    \include{chapter-utf8/chap-math}
+    \include{chapter-utf8/chap-tabfig}
+    \include{chapter-utf8/chap-faq}
 
     \appendix
-    \include{chapter/chap-req}
+    \include{chapter-utf8/chap-req}
 
-%%----------------- ¸½¼ş²¿·Ö ----------------- %%
+%%----------------- é™„ä»¶éƒ¨åˆ† ----------------- %%
     \backmatter
-    \include{chapter/thanks}
-    \include{chapter/bib}
+    \include{chapter-utf8/thanks}
+    \include{chapter-utf8/bib}
 
 \end{document}
 
